test: create test for seat service refactor ticket service test using more assertJ features create seat service test